# demo_code

./: .dockerignore  .env.example  ALGORITHM_DESCRIPTION.md  CLAUDE.md  DOCKER.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  QUICKSTART.md  README.md  docker-compose.yml  ei_task.md  si_task.md  tech_task.md
.claude/: settings.local.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  migrate_existing_data.py  pyproject.toml  seed_auth_data.py  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  aaecafab3c0c_add_authentication.py
backend/app/: config.py  database.py  main.py
backend/app/constants/: meeting_types.py  roles.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  meeting.py  participant.py  role_assignment.py  team.py  user.py
backend/app/routers/: assignments.py  auth.py  meetings.py  participants.py  settings.py  testing.py
backend/app/schemas/: __init__.py  meeting.py  participant.py  role_assignment.py  statistics.py  team.py  testing.py  user.py
backend/app/services/: assignment_engine.py  auth_service.py  energy_calculator.py  role_matcher.py  user_service.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  meetings.ts  participants.ts  settings.ts  testing.ts  types.ts
frontend/src/components/: ParticipantStatsModal.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
(+16 files in other folders)
